unit test restructure