@@ -1,33 +1,31 @@
 package geektime.tdd.di;
 
 import jakarta.inject.Inject;
-import java.lang.reflect.Constructor;
-import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Parameter;
+import java.lang.reflect.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import static java.util.Arrays.stream;
+import static java.util.stream.Stream.concat;
 
 class ConstructorInjectProvider<T> implements ComponentProvider<T> {
     private Constructor<T> injectConstructor;
+    private List<Field> injectFields;
+    private List<Method> injectMethods;
 
-    public ConstructorInjectProvider(Class<T> implementation) {
-        this.injectConstructor = getInjectConstructor(implementation);
+
+    public ConstructorInjectProvider(Class<T> component) {
+        if (Modifier.isAbstract(component.getModifiers())) throw new IllegalComponentException();
+        this.injectConstructor = getInjectConstructor(component);
+        this.injectFields = getInjectFields(component);
+        this.injectMethods = getInjectMethods(component);
+        if (injectFields.stream().anyMatch(f -> Modifier.isFinal(f.getModifiers())))
+            throw new IllegalComponentException();
+        if (injectMethods.stream().anyMatch(m -> m.getTypeParameters().length != 0))
+            throw new IllegalComponentException();
     }
 
-    @SuppressWarnings("unchecked")
-    private static <Type> Constructor<Type> getInjectConstructor(Class<Type> implementation) {
-        List<Constructor<?>> injectConstructors = stream(implementation.getConstructors())
-                .filter(c -> c.isAnnotationPresent(Inject.class)).toList();
-        if (injectConstructors.size() > 1) throw new IllegalComponentException();
-        return (Constructor<Type>) injectConstructors.stream().findFirst().orElseGet(() -> {
-            try {
-                return implementation.getConstructor();
-            } catch (NoSuchMethodException e) {
-                throw new IllegalComponentException();
-            }
-        });
-    }
 
     @Override
     public T get(Context context) {
@@ -35,7 +33,13 @@ class ConstructorInjectProvider<T> implements ComponentProvider<T> {
             Object[] dependencies = stream(injectConstructor.getParameters())
                     .map(p -> context.get(p.getType()).get())
                     .toArray(Object[]::new);
-            return injectConstructor.newInstance(dependencies);
+            T instance = injectConstructor.newInstance(dependencies);
+            for (Field field : injectFields)
+                field.set(instance, context.get(field.getType()).get());
+            for (Method method : injectMethods)
+                method.invoke(instance, stream(method.getParameterTypes()).map(type -> context.get(type).get())
+                        .toArray(Object[]::new));
+            return instance;
         } catch (InstantiationException | IllegalAccessException | InvocationTargetException e) {
             throw new RuntimeException(e);
         }
@@ -43,6 +47,52 @@ class ConstructorInjectProvider<T> implements ComponentProvider<T> {
 
     @Override
     public List<Class<?>> getDependencies() {
-        return stream(injectConstructor.getParameters()).map(Parameter::getType).collect(Collectors.toList());
+        return concat(concat(stream(injectConstructor.getParameters()).map(Parameter::getType),
+                        injectFields.stream().map(Field::getType)),
+                injectMethods.stream().flatMap(m -> stream(m.getParameterTypes()))
+        ).toList();
+    }
+
+    private List<Method> getInjectMethods(Class<T> component) {
+        List<Method> injectMethods = new ArrayList<>();
+        Class<?> current = component;
+        while (current != Object.class) {
+            injectMethods.addAll(stream(current.getDeclaredMethods()).filter(m -> m.isAnnotationPresent(Inject.class))
+                    .filter(m -> injectMethods.stream().noneMatch(o -> o.getName().equals(m.getName()) &&
+                            Arrays.equals(o.getParameterTypes(), m.getParameterTypes())))
+                    .filter(m -> stream(component.getDeclaredMethods()).filter(m1 -> !m1.isAnnotationPresent(Inject.class))
+                            .noneMatch(o -> o.getName().equals(m.getName()) &&
+                                    Arrays.equals(o.getParameterTypes(), m.getParameterTypes())))
+                    .toList());
+            current = current.getSuperclass();
+        }
+        Collections.reverse(injectMethods);
+        return injectMethods;
+    }
+
+    private static <T> List<Field> getInjectFields(Class<T> component) {
+        List<Field> injectFields = new ArrayList<>();
+        Class<?> current = component;
+        while (current != Object.class) {
+            injectFields.addAll(stream(current.getDeclaredFields())
+                    .filter(f -> f.isAnnotationPresent(Inject.class))
+                    .toList());
+            current = current.getSuperclass();
+        }
+        return injectFields;
+    }
+
+    @SuppressWarnings("unchecked")
+    private static <T> Constructor<T> getInjectConstructor(Class<T> implementation) {
+        List<Constructor<?>> injectConstructors = stream(implementation.getDeclaredConstructors())
+                .filter(c -> c.isAnnotationPresent(Inject.class)).toList();
+        if (injectConstructors.size() > 1) throw new IllegalComponentException();
+        return (Constructor<T>) injectConstructors.stream().findFirst().orElseGet(() -> {
+            try {
+                return implementation.getDeclaredConstructor();
+            } catch (NoSuchMethodException e) {
+                throw new IllegalComponentException();
+            }
+        });
     }
 }
